# dotfiles

./: .gitconfig  .gitignore  .gitleaks.toml  .gitmodules  .mailmap  .muttrc  .nixon.md  .npmrc  .spacemacs  .tmux.conf  .vimrc  .xsession  .zshenv  .zshrc  Makefile  README.md  README.org  build.sh  config.nix  copy.sh  dev  flake.nix  git.nix  hardware.nix  hm  hm-activate  home.nix  install  nixon.md  overlay.nix  secrets.nix  shell.nix  statix.toml  tmux.nix  treefmt.nix  users.nix  vim.nix
.ssh/: config
.tmux/: powerlinerc
.vim/: .gitignore  filetype.vim
ack/: .ackrc
bash/: .bashrc
bootstrap/: build-home.sh  build.sh  build.sh.bak  copy.sh  initNonNixOS.sh  install.sh  setup.sh  ssh-guest.sh  ssh.sh
ctags/: .ctags
direnv/: .direnvrc
emacs/: .spacemacs
git/: .gitconfig  .gitignore
gnome/: .gnomerc
home-manager/: barrier.nix  btop.nix  default.nix  dev.nix  direnvrc  extra-apps.nix  fonts.nix  ghostty.nix  git.nix  irc.nix  nixon.nix  spotify.nix  tmux.nix  vim.nix  vscode.nix  wsl.nix
lib/: allMachines.nix  allNixFiles.nix  allProfiles.nix  allProfilesIf.nix  default.nix  deployConf.nix  hm.nix  makeNixOS.nix  nixos2hm.nix
machine/: default.nix  hardware.nix
machines/: Tuple.nix  default.nix  deque.nix  generic.nix  genericLinux.nix  map.nix  nuckie.nix  qemu-server.nix  qemu-vm.nix  rassie.nix  rpi.nix  vmware.nix  wsl.nix
mail/: .mailcap  .muttrc
modules/: default.nix  machine.nix  sleep.nix  users.nix  xserver.nix
nixos/: configuration.nix
npm/: .npmrc
users/myme/wm/xmonad/.xmonad/: .gitignore  myme-xmonad.cabal  shell.nix
(+285 files in other folders)
