cabal-version:       >=1.10

name:                myme-xmonad
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Martin Øinæs Myrseth
maintainer:          myrseth@gmail.com
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable xmonad
  main-is:             xmonad.hs
  other-modules:       FontAwesome
  hs-source-dirs:      .
                     , lib
  build-depends:       base >=4.12
                     , containers
                     , xmonad
                     , xmonad-contrib
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
